# ProyectoFinal-IG

./: CMakeLists.txt
binary/: ProyectoFinal  ProyectoFinal-IG  Proyecto_Final  Sesion6
binary/resources/shaders/: fshader.glsl  fshader_cartoon.glsl  fshader_discard.glsl  fshader_procedural.glsl  vshader.glsl
extra/: main.cpp
src/: Model.cpp  Model.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  main.cpp
